--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "chart.js": "^4.5.1",
     "clsx": "^2.1.1",
+       "faker": "5.5.3",
     "react": "^19.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
     "swiper": "^12.0.3",
     "tailwindcss": "^4.1.17"
