--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@tailwindcss/vite": "^4.1.17",
     "chart.js": "^4.5.1",
     "clsx": "^2.1.1",
-       "faker": "5.5.3",
+    "faker": "5.5.3",
     "react": "^19.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/faker": "^6.6.8",
     "@types/node": "^24.10.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
